--- a/song_webapp/song_request/templates/song_request/base.html
+++ b/song_webapp/song_request/templates/song_request/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 
 <head>
@@ -24,7 +25,7 @@
 
   <div class="row container">
     {% block content %}
-    {% endblock content %}  
+    {% endblock content %}
   </div>
 
   <!-- Compiled and minified JavaScript -->
