--- a/song_webapp/song_request/templates/song_request/base.html
+++ b/song_webapp/song_request/templates/song_request/base.html
@@ -11,14 +11,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body class="grey">
   <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper container">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="sass.html">Placeholder</a></li>
       </ul>
     </div>
   </nav>
