--- a/song_webapp/song_request/templates/song_request/index.html
+++ b/song_webapp/song_request/templates/song_request/index.html
@@ -6,16 +6,7 @@
   <ul class="collection">
 
     {% for song in songs %}
-    <li class="collection-item avatar">
-      <i class="material-icons circle blue">library_music</i>
-      <span class="title">{{ song.name|title }}</span>
-      <p>
-        {{ song.band|title }}<br>
-        {{ song.album|title }}<br>
-        {{ song.year }}
-      </p>
-      <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-    </li>
+    <h1>Placeholder</h1>
     {% endfor %}
 
   </ul>
