updates for base, css

--- a/song_webapp/song_request/templates/song_request/base.html
+++ b/song_webapp/song_request/templates/song_request/base.html
@@ -7,12 +7,13 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="{% static "song_request/css/style.css" %}">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body class="grey lighten-3">
-  <nav class="orange">
+<body class="grey lighten-2">
+  <nav class="deep-orange">
     <div class="nav-wrapper container">
       <a href="#" class="brand-logo">Band-Planner</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
