--- a/song_webapp/song_request/templates/song_request/rehearsals.html
+++ b/song_webapp/song_request/templates/song_request/rehearsals.html
@@ -16,7 +16,7 @@
       zuletzt am: {{ song.last_played }}
     </p>
     <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-  </li>    
+  </li>
   {% endfor %}
   </ul>
 </div>
@@ -25,7 +25,7 @@
 {% for rehearsal in rehearsals %}
 <div class="card-panel">
   <h3 class="orange-text">Probedatum: {{ rehearsal.date }}</h3>
-    <h4 class="header grey-text">Songliste</h4>
+    <h4 class="header grey-text">Setliste</h4>
   <ul class="collection">
   {% for song in rehearsal.songs.all %}
   <li class="collection-item avatar">
